--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -50,15 +50,12 @@ table {
 /* End of Reset Stylesheet*/
 
 body {
-	box-sizing: border-box;
 	font-family: 'merriweather', sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
 
 .masthead {
 	height: 3em;
-	position: fixed;
-	width: 100%;
 	background-color: #000;
 }
 .masthead h3 {
@@ -66,17 +63,31 @@ body {
 	font-size: 1em;
 	float: left;
 	color: #fff;
-	padding: 14px 0 0 14px;
+	padding: 14px 0 8px 14px;
 }
 
-.title {
-	height: 35em;
-}
-
+.title .content {
+	margin: 4em 0 0 0;
+	}
 .title h1 {
-	margin-top: 10em;
-	text-align: center;
-}
+	font-family: 'lato';
+	font-size: 5.5em;
+	font-weight: 200;
+	margin: 0 0;
+	padding-top: 1.4em;	
+	}
+.title h2 {
+	font-family: 'robato';
+	font-size: 3em;
+	font-weight: 200;
+	margin: 0 0;
+	}
+.title img{
+	float: left;
+	border-radius: 15px;
+	margin-left: 1em;
+	padding-right: 0.4em;
+	}
 
 /*Animation Test*/
 h6 {
@@ -87,4 +98,4 @@ h6 {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
-/*Animation Test*/
+/*Animation Test
