added icons and lorem

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -54,6 +54,8 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
+/* Header Section*/
+
 .masthead {
 	height: 3em;
 	background-color: #000;
@@ -66,28 +68,57 @@ body {
 	padding: 14px 0 8px 14px;
 }
 
+/* Main Title Section*/
+
+.title {
+		margin: 4em 13em 3em 3em;
+		}
+
 .title .content {
-	margin: 4em 0 0 0;
+	-webkit-animation: fadein 3s;
 	}
+
 .title h1 {
 	font-family: 'lato';
 	font-size: 5.5em;
-	font-weight: 200;
+	font-weight: 100;
 	margin: 0 0;
 	padding-top: 1.4em;	
 	}
 .title h2 {
 	font-family: 'robato';
 	font-size: 3em;
-	font-weight: 200;
-	margin: 0 0;
+	font-weight: 100;
+	margin: 13px 0;
+	-webkit-animation: fadein 4s;
 	}
 .title img{
 	float: left;
 	border-radius: 15px;
-	margin-left: 1em;
-	padding-right: 0.4em;
+	margin: 0 2em;
 	}
+.title .social li {
+	width: 1em;
+	height: 1em;
+	color: blue;	
+	display: inline-block;
+	margin: 0 1em 3em 0;
+	padding: 10px;
+	border-radius: 50%;
+	border: solid 1px lightgray;
+}
+
+/*About Me Section*/
+
+.about hr {
+	border: 0;
+	border-top: 1px solid lightgray;
+	margin: 2.6em 5em;
+}
+
+.about .content {
+	margin: 2em 5em;
+}
 
 /*Animation Test*/
 h6 {
