--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -49,10 +49,11 @@ table {
 
 /* End of Reset Stylesheet*/
 
+/*Begin Custom Styles*/
+
 body {
 	font-family: 'merriweather', sans-serif;
 	-webkit-font-smoothing: antialiased;
-
 }
 
 h3 {
@@ -62,11 +63,19 @@ h3 {
 	text-align: center;
 }
 
+a {
+	text-decoration: none;
+}
+
 /* Header Section*/
 
 .masthead {
-	height: 3em;
+	width: 100%;
+	height: 2.8em;
 	background-color: #000;
+	position: fixed;
+	top: 0;
+	z-index: 999999;
 }
 
 .masthead h3 {
@@ -102,9 +111,11 @@ h3 {
 	-webkit-animation: fadein 4s;
 	}
 .title img{
+	width: 50%;
+	min-width: 2em;
 	float: left;
 	border-radius: 15px;
-	margin: 0 2em;
+	margin: 2.3em 2em;
 	}
 .title .social li {
 	width: 1em;
@@ -135,6 +146,9 @@ h3 {
 	margin-top: 1em;
 }
 
+.about .button {
+	text-align: center;
+}
 
 /*Projects section*/
 
@@ -165,6 +179,15 @@ h3 {
 	text-align: center;
 	margin-top: 10px;
 }
+
+button {
+	padding: 1em;
+	border-radius: 15px;
+	background-color: red;
+}
+
+
+/*Responsive Design*/
 
 /*Animation Test*/
 h6 {
