--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -61,10 +61,15 @@ h3 {
 	font-size: 1.5em;
 	font-weight: 150;
 	text-align: center;
+	text-shadow: 1px 1px 1px #818886;
 }
 
 a {
 	text-decoration: none;
+}
+
+a:hover {
+	opacity: 0.8;
 }
 
 /* Header Section*/
@@ -112,12 +117,14 @@ a {
 	font-size: 5em;
 	font-weight: 100;
 	margin: 0 0;
+	text-shadow: 2px 2px 0 #818886;
 	}
 .title h2 {
 	font-family: 'robato';
 	font-size: 3em;
 	font-weight: 100;
 	margin: 13px 0;
+	text-shadow: 1px 1px 1px #818886;
 	-webkit-animation: fadein 4s;
 	}
 .title img{
@@ -126,17 +133,19 @@ a {
 	min-width: 2em;
 	min-height: 3em;
 	border-radius: 15px;
+	box-shadow: 6px 2px 4px 0 #5C6E60;
 	margin: 2.5em 2em 2em 2em;
 	}
 .title .social li {
 	width: 1em;
 	height: 1em;
-	color: blue;	
+	color: rgb(22, 73, 40);
 	display: inline-block;
 	margin: 0 1em 3em 0;
 	padding: 10px;
-	border-radius: 50%;
-	border: solid 1px;
+	border-radius: 10px;
+	border: solid 1px black;
+	box-shadow: 1px 1px 1px #5C6E60;
 }
 
 /*About Me Section*/
@@ -145,7 +154,14 @@ a {
 	width: 80%;
 	margin: auto;
 	}
+.about p {
+	line-height: 150%
+}
+.about h3 {
+	margin-top: 1em;
+}
 .about hr {
+	width: 85%;
 	border: 0;
 	border-top: 1px solid;
 	/*margin: 1em 5em;*/
@@ -154,6 +170,9 @@ a {
 	font-family: 'robato';
 	font-size: 1.4em;
 	text-align: center;
+	color: #fff;
+	letter-spacing: 0.03em;
+	/*text-shadow: 1px 1px 0 #fff;*/
 }
 
 .about .button {
@@ -163,14 +182,15 @@ a {
 /*Projects section*/
 
 .projects hr { 
+	width: 85%;
 	border: 0;
 	border-top: 1px solid;
-	margin: 1em 5em;	
+	margin: 2em auto;
 }
-.projects .content {
+/*.projects .content {
 	margin: 2em 5em;
 	padding: 1em 3em;
-}
+}*/
 
 .projects .images {
 	width: 60%;
@@ -205,14 +225,36 @@ a {
 	font-size: .8em;
 	text-align: center;
 	margin-top: 10px;
+	color: rgb(56, 56, 56);
 }
 
 button {
 	padding: 1em;
 	border-radius: 15px;
-	background-color: red;
+	border-style: none;
+	background-color: rgb(5, 37, 22);
+	cursor: pointer;
 }
 
+/*Footer Section*/
+
+.footer {
+	width: 100%;
+	height: 3em;
+	background-color: #000;
+	color: white;
+}
+
+.footer .content {
+	width: 95%;
+	margin: auto;
+	padding: 1em;
+}
+
+.footer a {
+	text-decoration: none;
+	color: white;
+}
 
 /*Responsive Design*/
 
