--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -359,4 +359,23 @@ button {
 	}
 }
 
+@media only screen and (min-width: 320px) and (max-width: 559px) {
+	.title .content img {
+		height: 8em;
+	}
+	.title .content li {
+		margin: auto;
+	}
+	.projects .content .images {
+		width: 100%;
+		/*margin: 0.5em;*/
+	}
+	.projects .content .images .flex-item {
+		width: 80%;
+		/*margin: 1em;*/
+	}
+	.projects figure {
+		width: 100%;
+	}
+}
 
